--- a/Tetris.vcxproj
+++ b/Tetris.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{727f71ad-e696-469d-82ac-9efca2aa8aec}</ProjectGuid>
     <RootNamespace>Tetris</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Tetris</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
